Donate APP Database postgress

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </section>
     </main>
     
-    <footer>Com ❤️ Marcelo Galdino</footer>
+    <footer>Made with ❤️ by Marcelo Galdino</footer>
 
     <script src="/script.js"></script>
 </body>
